fix overflow

--- a/popup.css
+++ b/popup.css
@@ -13,6 +13,7 @@ body {
     box-shadow: 0px 10px 13px -7px #000000, 2px 13px 50px -13px #856034;
     padding-inline: 30px;
 
+    overflow: auto;
     color: black;
 }
 
