--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ div {
     margin-block: 5px;
 
     padding-left: 30px;
-    overflow-x: auto;
 }
 
 .aprovado {
